[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gdex-docs-dsarch"
authors = [{name = "Zaihua Ji", email = "zji@ucar.edu"}]
dynamic = ["version", "description"]
version = "1.0.2"
description = "Documentation for dsrqst utility program in RDA Python package rda_python_dsrqst"

[project.urls]
"Homepage" = "https://github.com/NCAR/gdex-docs-dsrqst"
